kubernetes/apps/gitops-system/flux-instance/app/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames: ["flux-webhook.noirprime.com"]
  parentRefs:
    - name: kgateway-external
      namespace: networking-system

  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: gitops-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
